Refactor get task by id